--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <header>
-    <meta http-equiv="refresh" content="0; url=/shinymewdownload.htm" />
+    <meta http-equiv="refresh" content="0; url=/zzazzdzz-fools2015/shinymewdownload.htm" />
   </header>
  <body>
    <p>Hey! This is not where you're suppposed to be! Click <a href="/shinymewdownload.htm">here</a> now!</p>
