--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="0; url=/zzazzdzz-fools2015/shinymewdownload.htm" />
   </header>
  <body>
-   <p>Hey! This is not where you're suppposed to be! Click <a href="/shinymewdownload.htm">here</a> now!</p>
+   <p>Hey! This is not where you're suppposed to be! I'm going to redirect you. If that doesn't work, click <a href="/shinymewdownload.htm">here</a>!</p>
  </body>
 </html>
