--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <header>
-    <meta http-equiv="refresh" content="0; url=/zzazzdzz-fools2015/shinymewdownload.htm" />
   </header>
  <body>
-   <p>Hey! This is not where you're suppposed to be! I'm going to redirect you. If that doesn't work, click <a href="/shinymewdownload.htm">here</a>!</p>
+   <p>Hello there!</p>
+   <p>Click <a href="/shinymewdownload.htm">here</a> to visit the "downloader"! (Note: View at your own risk)</p>
+   <p>Click <a href="https://github.io/gamingwithevets/zzazzdzz-fools2015">here</a> for more info about this "downloader"!</p>
  </body>
 </html>
