Update and rename shinymewdownload.htm to index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- (c) TheZZAZZGlitch 2015. Recovered by GamingWithEvets in 2021 -->
+
 <!-- Yep, it's April Fools. Reading the source code will ruin the surprise. Continue at your own risk. -->
 <meta charset='utf-8'>
 <style>
