--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="refresh" content="0; url=/">
+        <meta http-equiv="refresh" content="0; url=/zzazzdzz-fools2015">
         <script type="text/javascript">
-            window.location.href = "/"
+            window.location.href = "/zzazzdzz-fools2015"
         </script>
         <title>ABSOLUT 404</title>
     </head>
@@ -31,7 +31,7 @@
         <h1>ABSOLUT 404</h1><br>
         <h1>ABSOLUT 404</h1><br>
         <h1>ABSOLUT 404</h1><br>
-        <p>Oops, wrong page! I am now sending you to <a href="/">the correct page.</a>
+        <p>Oops, wrong page! I am now sending you to <a href="/zzazzdzz-fools2015">the correct page.</a>
         <p>Click/tap the link if the page doesn't redirect...</p>
     </body>
 </html>
