--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <input type='button' onclick='download(0,1000)' value='Click to begin your download...'>
         </p>
     </div>
+    <p>(c) <a href="https://www.youtube.com/@thezzazzglitch">TheZZAZZGlitch</a> 2015. <a href="https://github.com/gamingwithevets/zzazzdzz-fools2015">Recovered by GamingWithEvets in 2021</a></p>
 </center></td></tr></table>
 
 <script>
